# a-maze-ing

./: .gitignore  ANIMATION.md  ANIMATION_QUICK_START.md  ANIMATION_SUMMARY.md  IMPLEMENTATION.md  Makefile  PROJECT_README.md  README.md  a_maze_ing.py  build_package.sh  config.txt  config_imperfect.txt  config_invalid.txt  config_large.txt  config_small.txt  demo_animations.py  imperfect_maze.txt  large_maze.txt  maze.py  maze_animate.py  maze_format.py  maze_graphics.py  maze_pathfinding.py  maze_visualize.py  mazegen-1.0.0-py3-none-any.whl  mazegen.py  output_maze.txt  pyproject.toml  quick_test.sh  requirements.md  requirements.txt  small_maze.txt  test_maze.py  test_mazegen.py
mazegen/: README.md  __init__.py  mazegen.py
