[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation module with configurable parameters"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "prasingh, msantos2"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/Prashant-Bharaj/amazeing"
"Bug Tracker" = "https://github.com/Prashant-Bharaj/amazeing/issues"

[tool.setuptools]
py-modules = ["mazegen"]
